add some practice like ClassLoaderPractice and interview package